--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroui/react": "^2.7.8",
     "@types/node": "^15.14.9",
     "@types/react": "^17.0.84",
     "@types/react-dom": "^17.0.21",
@@ -19,10 +20,12 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.11",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.7",
     "typescript": "^4.9.5"
   },
   "scripts": {
-   "start": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
